# discord-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: deploy.yml
apps/bot/: Cargo.toml  Dockerfile
apps/bot/src/: config.rs  daily.rs  lib.rs  main.rs
apps/bot/src/command/stock/: delete.rs  graph.rs  mod.rs  trigger.rs  watch.rs
libs/stock/: Cargo.toml
libs/stock/src/: indicators.rs  lib.rs  price_client.rs  symbol_store.rs
libs/stock/src/indicators/: cdc.rs
