[workspace]
resolver = "3"
members = ["apps/bot", "libs/stock"]

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
